3 January 2018: Ralph
	- Fix queries being leaked above stub when refetching glue.

2 January 2017: Wouter
	- Fix that DS queries with referral replies are answered straight
	  away, without a repeat query picking the DS from cache.
	  The correct reply should have been an answer, the reply is fixed
	  by the scrubber to have the answer in the answer section.
	- Remove clang optimizer disable,
	  Fix that expiration date checks don't fail with clang -O2.

15 December 2017: Wouter
	- Fix timestamp failure because of clang optimizer failure, by
	  disabling -O2 when the compiler --version is clang.
	- iana port update.
	- Also disable -flto for clang, to make incep-expi signature check
	  work.

12 December 2017: Ralph
	- Fix qname-minimisation documentation (A QTYPE, not NS)

12 December 2017: Wouter
	- authzone work, transfer connect.

7 December 2017: Ralph
	- Check whether --with-libunbound-only is set when using --with-nettle
	  or --with-nss.

4 December 2017: Wouter 
	- Fix link failure on OmniOS.

1 December 2017: Wouter 
	- auth zone work.

30 November 2017: Wouter 
	- Fix #3299 - forward CNAME daisy chain is not working

14 November 2017: Wouter 
	- Fix #2882: Unbound behaviour changes (wrong) when domain-insecure is
	  set for stub zone.  It no longer searches for DNSSEC information.
	- auth xfer work on probe timer and lookup.

13 November 2017: Wouter 
	- Fix #2801: Install libunbound.pc.
	- Fix qname minimisation to send AAAA queries at zonecut like type A.
	- reverted AAAA change.

7 November 2017: Wouter 
	- Fix #2492: Documentation libunbound.

3 November 2017: Wouter 
	- Fix #2362: TLS1.3/openssl-1.1.1 not working.
	- Fix #2034 - Autoconf and -flto.
	- Fix #2141 - for libsodium detect lack of entropy in chroot, print
	  a message and exit.

2 November 2017: Wouter 
	- Fix #1913: ub_ctx_config is under circumstances thread-safe.
	- make ip-transparent option work on OpenBSD.

31 October 2017: Wouter 